Login mocked responses works mostly, Main activity sections set and viewable, just need implementing

--- a/ClientSideApp/app/src/main/res/values/strings.xml
+++ b/ClientSideApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Tweeter</string>
+    <string name="app_name">Rummage</string>
 
     <string name="logoutMenuTitle">Logout</string>
 
@@ -9,10 +9,10 @@
     <string name="title_activity_main">Tweeter</string>
     <string name="title_activity_user_view">Tweeter</string>
     <string name="loadingData">Loading More Data…</string>
-    <string name="feedTabTitle">Feed</string>
-    <string name="storyTabTitle">Story</string>
-    <string name="followingTabTitle">Following</string>
-    <string name="followersTabTitle">Followers</string>
+    <string name="feedTabTitle">All Sales</string>
+    <string name="storyTabTitle">Sale Map</string>
+    <string name="followingTabTitle">Followed Sales</string>
+    <string name="followersTabTitle">Followed Map</string>
 
     <string name="sampleAlias">"@UserAlias"</string>
     <string name="sampleUserName">The User</string>
@@ -23,7 +23,7 @@
     <string name="sampleTime">Sep 41 2020 10:49 PM</string>
 
     <!--  SignIn/SignUp Strings  -->
-    <string name="titleActivityLogin">Tweeter</string>
+    <string name="titleActivityLogin">Rummage</string>
     <string name="signInTabTitle">Sign In</string>
     <string name="signInButton">Sign In</string>
     <string name="signUpTabTitle">Sign Up</string>
@@ -53,7 +53,7 @@
     <string name="signOutFail">Unable to sign out.</string>
 
     <!--Post Status Strings-->
-    <string name="postTitle">Create New Post</string>
+    <string name="postTitle">Create New Yard Sale</string>
     <string name="postFullMessage">Use @ to mention users.\n(%d/%d characters used)</string>
     <string name="postPosButton">Post</string>
     <string name="postNegButton">Cancel</string>
