--- a/ClientSideApp/app/src/main/res/values/strings.xml
+++ b/ClientSideApp/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="followingTabTitle">Followed Sales</string>
     <string name="followersTabTitle">Followed Map</string>
 
-    <string name="sampleAlias">"@UserAlias"</string>
+    <string name="sampleAlias">"Caleb_Johnson"</string>
     <string name="sampleUserName">The User</string>
     <string name="title_activity_login">Sign in</string>
     <string name="followeeCount">Following: %d</string>
@@ -29,7 +29,7 @@
     <string name="signUpTabTitle">Sign Up</string>
     <string name="signUpButton">Sign Up</string>
     <string name="hintAlias">\@alias</string>
-    <string name="sampleSignInAlias">testUser</string>
+    <string name="sampleSignInAlias">Caleb_Johnson</string>
     <string name="hintPassword">password</string>
     <string name="samplePassword">badPassword</string>
     <string name="hintFirstName">First Name</string>
